Update Гневнов А.Е.,ИВТ 2.1.установке докера и запуске статичного сайта или Node-приложения.md

--- a/ЛР 4/Гневнов А.Е.,ИВТ 2.1.установке докера и запуске статичного сайта или Node-приложения.md
+++ b/ЛР 4/Гневнов А.Е.,ИВТ 2.1.установке докера и запуске статичного сайта или Node-приложения.md
@@ -1,4 +1,4 @@
-# Установке докера и запуске статичного сайта или Node-приложения
+# Установка докера и запуске статичного сайта или Node-приложения
 ## Выполнил: Гневнов А.Е., ИВТ 2.1
 
 ### Создание сервера
