Update Гневнов А.Е.,ИВТ 2.1.,Docker-Compose First Look.md

--- a/ЛР 6/Гневнов А.Е.,ИВТ 2.1.,Docker-Compose First Look.md
+++ b/ЛР 6/Гневнов А.Е.,ИВТ 2.1.,Docker-Compose First Look.md
@@ -1,4 +1,4 @@
-# Docker-Compose First Look
+# Docker-Compose First Look / LetsEncrypt & Nginx Proxy
 ## Выполнил: Гневнов А.Е.,ИВТ 2.1
 
 ### Создание докер файлов и файл приложением x2
@@ -95,7 +95,7 @@ EXPOSE 6980
 CMD ["./app"]
 
 ```
-### Создание докер композа
+### Создание докер композа yaml
 ``` yaml
 version: "3.8"
 
@@ -161,7 +161,10 @@ server {                                                                        
 ![alt text](images/image-4.png)
 
 ### Проверяем приложениями
+https://bimbosss.ru/bim1/   
 
 ![alt text](images/image-5.png)
+
+https://bimbosss.ru/bim2/
 
 ![alt text](images/image-6.png)
