Update Гневнов А.Е.,ИВТ 2.1.,Docker-Compose First Look.md

--- a/ЛР 6/Гневнов А.Е.,ИВТ 2.1.,Docker-Compose First Look.md
+++ b/ЛР 6/Гневнов А.Е.,ИВТ 2.1.,Docker-Compose First Look.md
@@ -1,7 +1,7 @@
 # Docker-Compose First Look / LetsEncrypt & Nginx Proxy
 ## Выполнил: Гневнов А.Е.,ИВТ 2.1
 
-### Создание докер файлов и файл приложением x2
+### Создание докер файлов и файлов с приложением x2
 ``` go
 package main
 
